apps/anki-sync-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: anki-sync-server
spec:
  selector:
    app: anki-sync-server
  ports:
  - port: 27701
    targetPort: 27701
