apps/anki-sync-server/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: anki-sync-server
  namespace: anki-sync-server
spec:
  parentRefs:
    - name: gateway-internal
      namespace: gateway
      sectionName: https
  hostnames:
  - "anki-sync.coruscant.yarnold.co.uk"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: anki-sync-server
      port: 27701
